Last pictures are added

--- a/doc.tex
+++ b/doc.tex
@@ -2,7 +2,7 @@
 %preamble
 \title{КР.430200.09.03.01.ПЗ}
 \providecommand\mytitle{КР. 430200. 09.03.01.ПЗ}
-\providecommand\kurtitle{The kur title will be setted}
+\providecommand\kurtitle{Разработка документации для конструкторско-технологического продукта с программным обеспечением}
 
 \begin{document}
 	\input{title.tex}
