--- a/src/project.tex
+++ b/src/project.tex
@@ -62,3 +62,6 @@
 			$T_{cp} = 1/{\Sigma\lambda_i}$, 
 			$T_{cp} = 366300$ часов.
 			\input{src/tables/projectt1.tex}
+		\subsection{Программная часть}
+			\subsubsection{Описание}
+			\subsubsection{Кодирование}
