--- a/src/schemes.tex
+++ b/src/schemes.tex
@@ -11,8 +11,8 @@
 \chapter{Схема принципиальная}
 	\section{Схема электрическая принципиальная}
 		\begin{center}
-			\includegraphics[width=180mm]{src/pictures/schemep3.png}
+			\includegraphics[width=165mm]{src/pictures/schemep3.png}
 		\end{center}
-		\newpage
+		% \newpage
 	\section{Перечень элементов}
 		\input{src/tables/schemet1.tex}
