--- a/src/task.tex
+++ b/src/task.tex
@@ -61,16 +61,18 @@
 				\end{enumerate}
 				\subsubsection{Разрабатываемое изделие должно иметь моноблочную конструкцию.}
 				\subsubsection{Разрабатываемое изделие должно соответствовать следующим требованиям:}
-					5.5.3.1 Размеры:
 					\begin{enumerate}
-						\item Габаритные - 450х450х160 мм, не более;
-						\item Установочные - 500х500х210 мм, не более.
+						\item Размеры:
+							\begin{enumerate}
+								\item Габаритные - 450х450х160 мм, не более;
+								\item Установочные - 500х500х210 мм, не более.
+							\end{enumerate}
+						\item Масса - 2 кг, не более.
+						\item Устройство крепится на вертикальную поверхность с помощью винтовых соединений.
+						\item Тип кабеля – витая пара.
+						\item Тип порта - RJ-45.
+						\item Разрабатываемое изделие должно иметь максимальную длину кабеля, подключающего датчик к устройству, 400 метров.
 					\end{enumerate}
-					5.5.3.2 Масса - 2 кг, не более.
-					5.5.3.3 Устройство крепится на вертикальную поверхность с помощью винтовых соединений.
-					5.5.3.4 Тип кабеля – витая пара.
-					5.5.3.5 Тип порта - RJ-45.
-					5.5.3.6 Разрабатываемое изделие должно иметь максимальную длину кабеля, подключающего датчик к устройству, 400 метров.
 					\subsubsection{Покрытия должны обеспечивать необходимую коррозионную стойкость, надежную работу и декоративный вид разрабатываемого изделия при эксплуатации и при хранении.}
 					\subsubsection{Оборудование не должно требовать доступа сзади при монтаже, подводке кабеля и обслуживании.}
 					\subsubsection{Внешние электрические разъемы должны иметь маркировку, позволяющую определить их назначение.}
@@ -79,25 +81,29 @@
 			Кодирование и компоновка средств отображения информации, органов управления на пульте управления, цветовое оформление лицевых панелей пульта разрабатываемого изделия должны обеспечивать безошибочность и быстродействие операторов, удобство и безопасность работы в любое время суток.  Необходимо предусмотреть независимое автономное питание, обеспечивающее работу ПКП и извещателей в течении не менее чем 24 часов в дежурном режиме и в течении не менее чем 3 часов в режиме «тревога».
 		\subsection{Требования к эксплуатации, удобству технического обслуживания и ремонта}
 			\subsubsection{Требования к стойкости к внешним воздействующим факторам}
-				5.7.1.1 Разрабатываемое изделие должно быть стойким, устойчивым и прочным к воздействию климатических факторов в соответствии с таблицей \ref{taskt1}:
+				1) Разрабатываемое изделие должно быть стойким, устойчивым и прочным к воздействию климатических факторов в соответствии с таблицей \ref{taskt1}:
 				\input{src/tables/taskt1.tex}
 
-				5.7.1.2 Разрабатываемое изделие должно быть устойчивым к воздействию механических факторов в соответствии с таблицей \ref{taskt2}:
+				2) Разрабатываемое изделие должно быть устойчивым к воздействию механических факторов в соответствии с таблицей \ref{taskt2}:
 				\input{src/tables/taskt2.tex}
 
 			\subsubsection{Требования к эксплуатационным показателям}
-				5.7.2.1 Разрабатываемый Комплекс должен обеспечивать циклическую работу со следующими параметрами цикла: время загрузки – 30 мин., время обработки – 10 час., время выгрузки – 30 мин., время подготовки – 10 мин.
-				5.7.2.2 Должен быть обеспечен режим работы от аварийного источника питания.
-				5.7.2.3 Периодическое техническое обслуживание разрабатываемого изделия должно проводиться не реже одного раза в год.
-				5.7.2.4 Периодическое техническое обслуживание должно включать в себя обслуживание всех датчиков.
-				5.7.2.5 К обслуживанию комплекса должны допускаться лица, имеющие допуск к работе с электроустановками напряжением до 220 В.
-				5.7.2.6 Гарантийный срок разрабатываемого Комплекса должен составлять 5 лет, не менее.
-			\subsubsection{Требования по ремонтопригодности}
-				5.7.3.1 Обслуживание и ремонт разрабатываемого Изделия должны производиться без применения специальных инструментов."
-				5.7.3.2 Требования к ЗИП
 				\begin{enumerate}
-					\item Комплект ЗИП должен включать запасные части, необходимые для ремонта и поддержания работоспособного состояния разрабатываемого изделия в течение одного года.
-					\item В комплект ЗИП должны входить дополнительные датчики и вилки RJ-45.
+					\item Разрабатываемый Комплекс должен обеспечивать циклическую работу со следующими параметрами цикла: время загрузки – 30 мин., время обработки – 10 час., время выгрузки – 30 мин., время подготовки – 10 мин.
+					\item Должен быть обеспечен режим работы от аварийного источника питания.
+					\item Периодическое техническое обслуживание разрабатываемого изделия должно проводиться не реже одного раза в год.
+					\item Периодическое техническое обслуживание должно включать в себя обслуживание всех датчиков.
+					\item К обслуживанию комплекса должны допускаться лица, имеющие допуск к работе с электроустановками напряжением до 220 В.
+					\item Гарантийный срок разрабатываемого Комплекса должен составлять 5 лет, не менее.
+				\end{enumerate}
+			\subsubsection{Требования по ремонтопригодности}
+				\begin{enumerate}
+					\item Обслуживание и ремонт разрабатываемого Изделия должны производиться без применения специальных инструментов."
+					\item Требования к ЗИП
+						\begin{enumerate}
+							\item Комплект ЗИП должен включать запасные части, необходимые для ремонта и поддержания работоспособного состояния разрабатываемого изделия в течение одного года.
+							\item В комплект ЗИП должны входить дополнительные датчики и вилки RJ-45.
+						\end{enumerate}
 				\end{enumerate}
 		\subsection{Требования безопасности}
 			\subsubsection{Условия работы персонала разрабатываемой Системы должны соответствовать санитарным нормам по СанПиН 2.2.2/2.4.1340-03.}
@@ -106,8 +112,8 @@
 			\subsubsection{Требования к упаковке}
 				Упаковка должна быть выполнена из картона материалов и обеспечивать защиту от ударных воздействий.
 			\subsubsection{Требования к маркировке}
-				5.9.2.1 Надписи, цифры, буквы и знаки, нанесенные при маркировке, должны быть хорошо видны, и сохранять четкость в течение всего срока эксплуатации.
-				5.9.2.2 Маркировка упаковки для транспортирования должна содержать основные, дополнительные, информационные надписи и манипуляционные.
+				Надписи, цифры, буквы и знаки, нанесенные при маркировке, должны быть хорошо видны, и сохранять четкость в течение всего срока эксплуатации.
+				Маркировка упаковки для транспортирования должна содержать основные, дополнительные, информационные надписи и манипуляционные.
 		\subsection{Требования к консервации, хранению и транспортированию}
 			\subsubsection{Условия хранения}
 				Изделие должно храниться в упакованном виде в отапливаемых и вентилируемых помещениях при температуре от 5 до 35 °С и относительной влажности воздуха не выше 80\% (при температуре 25 °С) при отсутствии в этих помещениях конденсации влаги, паров химически активных веществ и источников электромагнитных полей.
@@ -128,8 +134,27 @@
 		\subsection{Требования по метрологическому обеспечению}
 			Особых требований не предъявляется.
 		\subsection{Требования по программному обеспечению}
-			Особых требований не предъявляется.
-	\section{Экономическое обоснование}
+			\subsubsection{Назначение}
+				Программное обеспечение должно предоставлять возможность работы с информацией,
+					то есть реализовывать основные функции при работе с информацией, а именно:
+				\begin{itemize}
+					\item Сбор;
+					\item Хранение;
+					\item Передачу.
+				\end{itemize}
+			\subsubsection{}
+
+	\section{Технико-экономические требования}
+		\subsubsection{Основные технико-экономические требования}
+			Разрабатываемый продукт должен обеспечить:
+			- стимулирование внедрения и использования эффективных, оптимальных по стоимости <…>;
+			- создание унифицированного решения для организации информационного взаимодействия между <…>; 
+			Внедрение создаваемой в рамках ОКР научно-технической продукции должно обеспечивать следующие социально-экономические эффекты:
+			- сокращение сроков разработки <…>;
+			- уменьшение технического риска при реализации передовых технических решений <…>"
+			Разрабатываемая продукция должна быть ориентирована на коммерческое применение в следующих областях:
+			- системы энергосбережения, мониторинга и управления <…>;
+			- системы автоматизации организаций, связанных с <…>;»
 
 	\section{Наименование этапов и выполняемых работ}
 		\begin{enumerate}
