Tech task is done

--- a/src/task.tex
+++ b/src/task.tex
@@ -142,19 +142,31 @@
 					\item Хранение;
 					\item Передачу.
 				\end{itemize}
-			\subsubsection{}
-
+			\subsubsection{Нормативные документы}
+				При разработке и вводе в эксплуатацию программного обеспечения
+				Исполнитель должен руководствоваться требованиями следующих
+				нормативных документов Госстандарта:
+				\begin{itemize}
+					\item ГОСТ 34.601.90 – стандарт, устанавливающий стадии и этапы создания АС, а также содержание работ на каждом этапе;
+					\item ГОСТ 34.603.92 – стандарт, устанавливающий виды испытаний АС и общие требования к их проведению.
+				\end{itemize}
 	\section{Технико-экономические требования}
-		\subsubsection{Основные технико-экономические требования}
+		\subsection{Основные технико-экономические требования}
 			Разрабатываемый продукт должен обеспечить:
-			- стимулирование внедрения и использования эффективных, оптимальных по стоимости <…>;
-			- создание унифицированного решения для организации информационного взаимодействия между <…>; 
-			Внедрение создаваемой в рамках ОКР научно-технической продукции должно обеспечивать следующие социально-экономические эффекты:
-			- сокращение сроков разработки <…>;
-			- уменьшение технического риска при реализации передовых технических решений <…>"
+			\begin{itemize}
+				\item стимулирование внедрения и использования эффективных, оптимальных по стоимости, охранных систем;
+				\item создание унифицированного решения для организации информационного взаимодействия между подразделениями.
+			\end{itemize}
+			Внедрение создаваемой в рамках разработки научно-технической продукции должно обеспечивать следующие социально-экономические эффекты:
+			\begin{itemize}
+				\item сокращение сроков разработки 3 месяца;
+				\item уменьшение технического риска при реализации передовых технических решений в сфере охраны.
+			\end{itemize}
 			Разрабатываемая продукция должна быть ориентирована на коммерческое применение в следующих областях:
-			- системы энергосбережения, мониторинга и управления <…>;
-			- системы автоматизации организаций, связанных с <…>;»
+			\begin{itemize}
+				\item системы охраны, мониторинга и управления;
+				\item системы автоматизации организаций, связанных с охраной.
+			\end{itemize}
 
 	\section{Наименование этапов и выполняемых работ}
 		\begin{enumerate}
