--- a/src/introduction.tex
+++ b/src/introduction.tex
@@ -1,2 +1,36 @@
-\chapter*{Задание}\addcontentsline{toc}{chapter}{Задание}
+% \chapter*{Задание}\addcontentsline{toc}{chapter}{Задание}
 \chapter*{Введение}\addcontentsline{toc}{chapter}{Введение}
+Для внедрения разрабатываемого продукта необходим перечень документов.
+Данные документы необходимы для разработки, внедрения и сопровождения разрабатываемого продукта.
+В данной курсовой работе разрабатывается перечень документов для охранной системы, а именно:
+\begin{enumerate}
+	\item Техническое задание;
+	\item Техническое предложение;
+	\item Технический проект;
+	\item Схема функциональная;
+	\item Схема структурная;
+	\item Схема принципиальная;
+	\item Чертёж основания;
+	\item Чертёж крышки корпуса;
+	\item Чертёж сборочный;
+	\item Рисунок печатной платы.
+\end{enumerate}
+
+Общеизвестным фактом является то, что с автоматизированными системами рука об руку идёт и программное сопровождение.
+Следовательно, в стадии разработки нового продукта следует включить и этапы разработки программного обеспечения.
+А также следует разработать требования к программной части продукта и включить в проект программную реализацию.
+
+Для того, чтобы разрабатываемый продукт обладал конкурентоспособностью, уделяют большое внимание на его качество и соответствие принятым стандартам.
+Преследуя выше сказанную цель, разрабатываемый продукт подвергают сертификации.
+Для успешного завершения процесса разработки и внедрения нового продукта следует ориентироваться на перечень нормативных документов, например:
+\begin{itemize}
+	\item ГОСТ 34.602 89\cite{gost89};
+	\item ГОСТ 34.601.90\cite{gost90}:
+	\item ГОСТ 34.603.92\cite{gost92};
+	\item ГОСТ 2.114-95\cite{gost95};
+	\item ГОСТ Р 53736-2009\cite{gost09}.
+\end{itemize}
+
+Сейчас существует разнообразное множество стандартов и рекомендаций, которые находятся в свободном доступе.
+В процессе выполнения данной курсовой работы следует ознакомиться с некоторым перечнем нормативных документов и получить 
+навыки в разработки продуктов с программным обеспечением.
