--- a/src/offer.tex
+++ b/src/offer.tex
@@ -11,7 +11,7 @@
 		\begin{figure}[ht!]
 			\centering
 			\includegraphics[width=150mm]{src/pictures/offerp2.png}
-			\caption{Структурная схема на компараторе и регистре}\label{offerp2}
+			\caption{Структурная схема на компараторе и микроконтроллере}\label{offerp2}
 		\end{figure}
 
 		Сравнение вариантов реализации представлено в таблице \ref{offert1}.
@@ -39,6 +39,6 @@
 			Выбор датчика был произведён между датчиками марки «Рапид»: Рапид-3; Рапид-2; Рапид-10. Сравнение вариантов представлено в таблице \ref{offert3}.
 			\input{src/tables/offert3.tex}
 	\section{Заключение по проведённым анализам}
-		После анализа предложенных вариантов реализации был выбран вариант с регистром, т.к. вариант на ПЛИС имеет более высокую себестоимость.
+		После анализа предложенных вариантов реализации был выбран вариант c микроконтроллером, т.к. вариант на ПЛИС имеет более высокую себестоимость.
 
 		После анализа предложенных вариантов инфракрасных датчиков был выбран  Рапид-3, т.к. вариант является наиболее экономичным.
