--- a/src/project.tex
+++ b/src/project.tex
@@ -1,4 +1,4 @@
-\chapter{Технический проект}
+eн вызов специалиста, который средствами микроконтроллера извлечёт необходимую информацию.\chapter{Технический проект}
 	\section{Техническое описание}
 		\subsection{Назначение}
 				Устройство предназначения для мониторинга и включения системы оповещения в случае
@@ -9,13 +9,13 @@
 
 				Сигналы, полученные от датчиков, поступают на аналоговый сумматор AD1, значение
 			выхода (контакт 6) AD1 преобразуется в цифровой сигнал с помощью DD1. К
-			управляющему устройству DD4 подключаются выходs с преобразователя DD1 и с регистра
+			управляющему устройству DD4 подключаются выходs с преобразователя DD1 и с микроконтроллера
 			DD3. Результат сравнения получаемой и хранимой информации подаётся с управляющего
 			устройства DD4 на преобразователь DD2. Сигналы, полученные от DD2 выводится на диоды
-			R1-R10. Необходимые настройки хранятся в регистре DD3.
+			R1-R10. Необходимые настройки хранятся в микроконтроллере DD3.
 
 				Настройки, определяемые производителем, устанавливаются с помощью X1, выходы
-			которого подключены к регистру DD3.
+			которого подключены к микроконтроллеру DD3.
 	\section{Расчёты}
 			Прибор сравнивает значение с датчиков и заданное значение, результаты передаются на
 		выходы управляющего устройства.
@@ -64,4 +64,15 @@
 			\input{src/tables/projectt1.tex}
 		\subsection{Программная часть}
 			\subsubsection{Описание}
+				Программа, ккоторая вшивается в микроконтроллер, работает по приципу автомата. То есть при послуплении новой информации вся хранимая информация сдвикается на определённый размер записи. В момент переполнения банка данных самая старая запись стирается и записывается новая в начало, а остальные записи так же сдвигаются на размер записей. 
+				
+				Запись имеет следующий формат: <<HH:MM dd.mm.yyyy>>. 
+				
+				При необходимости считывания записией, нужeн вызов специалиста, который средствами микроконтроллера извлечёт необходимую информацию.
 			\subsubsection{Кодирование}
+				На рисунке \ref{projectp2} изабражен листинг проживки микроконтроллера.
+				\begin{figure}[ht!]
+					\centering
+					\includegraphics[width=150mm]{src/pictures/program.png}
+					\caption{Диаграмма выбор способа охлаждения}\label{projectp2}
+				\end{figure}
