--- a/src/tables/offert1.tex
+++ b/src/tables/offert1.tex
@@ -1,9 +1,9 @@
 \begin{longtable}[t]{@{\extracolsep{\fill}}|l|@{\hskip-14pt}p{0.3\textwidth}|@{\hskip-14pt}p{0.3\textwidth}|}
 	\caption{Сравнение реализаций} \label{offert1} \\ \hline
-	Вид & На ПЛИС & На регистре и компораторе \\ \hline
+	Вид & На ПЛИС & На микроконтроллере и компораторе \\ \hline
 	\endfirsthead
 	\caption* {Продолжение таблицы \ref{offert1}}\\ \hline
-	Вид & На ПЛИС & На регистре и компораторе \\ \hline
+	Вид & На ПЛИС & На микроконтроллере и компораторе \\ \hline
 	\endhead
 	Структура	&
 		1) ПЛИС хранит установленные настройки и суммирует значения датчиков. 
@@ -12,11 +12,11 @@
 
 		3) Результат сравнения преобразуется из цифрового сигнала в аналоговый.
 					&
-		1) Цифровой регистр хранит установленные настройки. 
+		1) Цифровой микроконтроллер хранит установленные настройки. 
 
 		2) Значения с датчиков проходят через сумматор. 
 
-		3) Сравнение установленных настроек, хранимых в регистре, и показателей датчиков производится с помощью компаратора. 
+		3) Сравнение установленных настроек, хранимых в микроконтроллере, и показателей датчиков производится с помощью компаратора. 
 
 		4) Выходная информация с компаратора преобразуется в аналоговый сигнал.
 		\\ \hline
