--- a/src/tables/schemet1.tex
+++ b/src/tables/schemet1.tex
@@ -11,6 +11,6 @@
 	6	&	DD1		&	Аналого-цифровой преобразователь ADC08L060	& 1		\\ \hline
 	7	&	DD2		&	Цифро-аналоговый преобразователь DAC084S085	& 1		\\ \hline
 	8	&	AD1		&	Аналоговый сумматор LF411СN					& 1     \\ \hline
-	9	&	DD3		&	Регистр 74AC244B							& 1     \\ \hline
+	9	&	DD3		&	Микроконтроллера AT89C52					& 1     \\ \hline
 	10	&	DD4		&	Компаратор 54AC11520FK						& 1     \\ \hline
 \end{longtable}
