--- a/src/task.tex
+++ b/src/task.tex
@@ -106,7 +106,7 @@
 						\end{enumerate}
 				\end{enumerate}
 		\subsection{Требования безопасности}
-			\subsubsection{Условия работы персонала разрабатываемой Системы должны соответствовать санитарным нормам по СанПиН 2.2.2/2.4.1340-03.}
+			\subsubsection{Условия работы персонала разрабатываемой Системы должны соответствовать санитарным нормам по СанПиН 2.2.2/2.4.1340-03 \cite{sanpin}.}
 			\subsubsection{Требования безопасности при монтаже, наладке, эксплуатации, обслуживании и ремонте разрабатываемого Комплекса должны быть приведены в эксплуатационной документации.}
 		\subsection{Требования к упаковке и маркировке}
 			\subsubsection{Требования к упаковке}
@@ -147,8 +147,8 @@
 				Исполнитель должен руководствоваться требованиями следующих
 				нормативных документов Госстандарта:
 				\begin{itemize}
-					\item ГОСТ 34.601.90 – стандарт, устанавливающий стадии и этапы создания АС, а также содержание работ на каждом этапе;
-					\item ГОСТ 34.603.92 – стандарт, устанавливающий виды испытаний АС и общие требования к их проведению.
+					\item ГОСТ 34.601.90 – стандарт, устанавливающий стадии и этапы создания АС, а также содержание работ на каждом этапе \cite{gost90};
+					\item ГОСТ 34.603.92 – стандарт, устанавливающий виды испытаний АС и общие требования к их проведению \cite{gost92}.
 				\end{itemize}
 	\section{Технико-экономические требования}
 		\subsection{Основные технико-экономические требования}
