Biblio and conclusion are done

--- a/biblio.bib
+++ b/biblio.bib
@@ -1,60 +1,62 @@
 @BOOK{gost89,
-	author = "ГОСТ 34.602.89",
-	title = "Методические указания по курсу «Основы IT-менеджмента»",
-	address = "И.",
-	publisher = "ИрНИТУ",
+	author = "",
+	title = "ГОСТ 34.602.89. Информационная технология. Комплекс стандартов на автоматизированные системы.Техническое задание на создание автоматизированной системы",
+	address = " - Введ. 01-01-1990 - М.",
+	publisher = "Госстандарт России : Изд-во стандартов",
 	year = 2016,
-	numpages = 246,
+	numpages = 11,
 }
 
 @BOOK{gost90,
-	author = "ГОСТ 34.601.90",
-title = "Методические указания по курсу «Основы IT-менеджмента»",
-	address = "И.",
-	publisher = "ИрНИТУ",
+	author = "",
+title = "ГОСТ 34.601.90. Информационная технология. Комплекс стандартов на автоматизированные системы. Автоматизированные системы. Стадии создания",
+	address = " - Введ. 01-01-1992 - М.",
+	publisher = "Госстандарт России : Изд-во стандартов",
 	year = 2016,
-	numpages = 246,
+	numpages = 5,
 }
 
 @BOOK{gost92,
-	author = "ГОСТ 34.603.92",
-	title = "Экономическое оценка инвестиций и принятие управленческих решений",
-	address = "M.",
-	publisher = "Издательство стандартов",
-	year = 1985,
-	numpages = 7,
+	author = "",
+	title = "ГОСТ 34.603.92. Информационная технология. Виды испытаний автоматизированных систем",
+	address = " - Введ. 01-01-1993 - М.",
+	publisher = "Госстандарт России : Изд-во стандартов стандартов",
+	year = 2016,
+	numpages = 5,
 }
 
 @BOOK{gost95,
-	author = "ГОСТ 2.114-95",
-	title = "Методические указания по курсу «Основы IT-менеджмента»",
-	address = "И.",
-	publisher = "ИрНИТУ",
+	author = "",
+	title = "ГОСТ 2.114-95. Единая система конструкторской документации. Технические условия",
+	address = " - Введ. 01-01-1996 - М.",
+	publisher = "Госстандарт России : Изд-во стандартов",
 	year = 2016,
-	numpages = 246,
+	numpages = 12,
 }
 
 @BOOK{gost09,
-	author = "ГОСТ Р 53736-2009",
-	title = "Методические указания по курсу «Основы IT-менеджмента»",
-	address = "И.",
-	publisher = "ИрНИТУ",
+	author = "",
+	title = "ГОСТ Р 53736-2009. Изделия электронной техники. Порядок создания и постановки на производство. Основные положения",
+	address = " - Введ. 01-01-2011 - М.",
+	publisher = "Госстандарт России : Изд-во стандартов",
 	year = 2016,
-	numpages = 246,
+	numpages = 50,
 }
 
 @BOOK{sanpin,
 	author = "",
-	title = "СанПиН 2.2.2/2.4.1340-03",
-	address = "И.",
-	publisher = "ИрНИТУ",
-	year = 2016,
-	numpages = 246,
+	title = "СанПиН 2.2.2/2.4.1340-03. О введении в действие санитарно-эпидемиологических правил и нормативов",
+	address = " - Введ. 01-01-2003 - М.",
+	publisher = "Федеральный центр гигиены и эпидемиологии Роспотребнадзора",
+	year = 2017,
+	numpages = 6,
 }
 
-@MISC{doe:website,
-	AUTHOR = "John Doe",
-	TITLE = "the website title",
-	YEAR = 2011,
-	NOTE = "url{http://whereever/file.ext}"
+@BOOK{norm,
+	author = "",
+	title = "Требования к оформлению текстовой и графической документации. Нормоконтроль",
+	address = " - И.",
+	publisher = "ИрГУПС",
+	year = 2017,
+	numpages = 46,
 }
