--- a/src/introduction.tex
+++ b/src/introduction.tex
@@ -1,4 +1,5 @@
-% \chapter*{Задание}\addcontentsline{toc}{chapter}{Задание}
+\chapter*{Задание}\addcontentsline{toc}{chapter}{Задание}
+
 \chapter*{Введение}\addcontentsline{toc}{chapter}{Введение}
 Для внедрения разрабатываемого продукта необходим перечень документов.
 Данные документы необходимы для разработки, внедрения и сопровождения разрабатываемого продукта.
