--- a/src/project.tex
+++ b/src/project.tex
@@ -1,4 +1,4 @@
-eн вызов специалиста, который средствами микроконтроллера извлечёт необходимую информацию.\chapter{Технический проект}
+\chapter{Технический проект}
 	\section{Техническое описание}
 		\subsection{Назначение}
 				Устройство предназначения для мониторинга и включения системы оповещения в случае
