--- a/src/task.tex
+++ b/src/task.tex
@@ -2,7 +2,7 @@
 	\section{Обоснование для проведения работ}
 		Задание преподавателя.
 	\section{Исполнитель работ}
-		Студент ИрГУПС ФУТиИT группы ПИь-16 Арляпов С.В.
+		Студент ИрГУПС ФУТиИT группы ПИм-16 Арляпов С.В.
 	\section{Цель выполнения работ}
 		Разработать устройство охранной сигнализации, предназначенное для контроля, мониторинга и управления территориально-распределенными объектами муниципальных и ведомственных образований с целью увеличения безопасности.
 	\section{Назначение продукции}
