--- a/src/introduction.tex
+++ b/src/introduction.tex
@@ -1,4 +1,9 @@
 \chapter*{Задание}\addcontentsline{toc}{chapter}{Задание}
+Выполнение курсовой работы направлено на приобретение навыков по разработке технической документации, сопровождающей создаваемый продукт. 
+Техническая документация к любому продукту в определенных аспектах основывается на существующих стандартах и нормативных документах, регулирующих то или иное направление функционирования продукта. 
+Данные нормативные документы необходимы для обеспечения разработки легального, безопасного, экономически обоснованного и эффективного программного обеспечения. Задача студента составить полное описание продукта и его работы, включающее стадию его разработки и стадию эксплуатации. Курсовая работа должна содержать разделы, освещающие назначение продукта, технические требования к нему и окружению, обеспечивающие надёжность и безопасность работы, конструктивные требования и проектные решения, требования к эксплуатации и условия технического обслуживания, а также технико-экономическое обоснование продукта. 
+
+Для выполнения курсовой работы студент должен ознакомиться с нормативной базой ГОСТов, СНИП и СП, выявить необходимые документы для регулирования функционирования продукта и прописать технические требования и условия для разработки данного продукта.
 
 \chapter*{Введение}\addcontentsline{toc}{chapter}{Введение}
 Для внедрения разрабатываемого продукта необходим перечень документов.
