--- a/doc.tex
+++ b/doc.tex
@@ -1,4 +1,4 @@
-\documentclass[numbers=noenddot]{kurreport}
+\documentclass[numbers=noenddot,a4paper]{kurreport}
 %preamble
 \title{КР.430200.09.04.04.ПЗ}
 \providecommand\mytitle{КР. 430200. 09.04.04.ПЗ}
