Fariant for first showing

--- a/src/introduction.tex
+++ b/src/introduction.tex
@@ -10,6 +10,7 @@
 Данные документы необходимы для разработки, внедрения и сопровождения разрабатываемого продукта.
 В данной курсовой работе разрабатывается перечень документов для охранной системы, а именно:
 \begin{enumerate}
+\changefontsizes[14pt]{14pt}
 	\item Техническое задание;
 	\item Техническое предложение;
 	\item Технический проект;
@@ -30,6 +31,7 @@
 Преследуя выше сказанную цель, разрабатываемый продукт подвергают сертификации.
 Для успешного завершения процесса разработки и внедрения нового продукта следует ориентироваться на перечень нормативных документов, например:
 \begin{itemize}
+\changefontsizes[14pt]{14pt}
 	\item ГОСТ 34.602 89\cite{gost89};
 	\item ГОСТ 34.601.90\cite{gost90}:
 	\item ГОСТ 34.603.92\cite{gost92};
