--- a/src/offer.tex
+++ b/src/offer.tex
@@ -24,6 +24,7 @@
 
 			В настоящее время наибольшее распространение получили следующие виды датчиков движения:
 			\begin{itemize}
+\changefontsizes[14pt]{14pt}
 				\item Инфракрасные датчики движения (ИК);
 				\item Ультразвуковые датчики движения (УЗ);
 				\item Микроволновые датчики движения (СВЧ).
