--- a/src/tables/offert1.tex
+++ b/src/tables/offert1.tex
@@ -1,4 +1,5 @@
 \begin{longtable}[t]{@{\extracolsep{\fill}}|l|@{\hskip-14pt}p{0.3\textwidth}|@{\hskip-14pt}p{0.3\textwidth}|}
+\changefontsizes[14pt]{14pt}
 	\caption{Сравнение реализаций} \label{offert1} \\ \hline
 	Вид & На ПЛИС & На микроконтроллере и компораторе \\ \hline
 	\endfirsthead
