--- a/src/task.tex
+++ b/src/task.tex
@@ -10,6 +10,7 @@
 	\section{Технические требования}
 		\subsection{Состав продукции}
 		 	\begin{enumerate}
+\changefontsizes[14pt]{14pt}
 				\item Основной блок устройства обработки информации;
 				\item Датчики «Рапид 3» - 3 штуки;
 				\item Витая пара – 1 км;
@@ -20,12 +21,14 @@
 			\subsubsection{Выполняемые функции}
 				Разрабатываемое устройство должно обеспечивать в режиме реального времени:
 				\begin{enumerate}
+\changefontsizes[14pt]{14pt}
 					\item сбор данных;
 					\item обработку данных;
 					\item оповещение оператора.
 				\end{enumerate}
 			\subsubsection{Нормы и количественные показатели}
 				\begin{itemize}
+				\changefontsizes[14pt]{14pt}
 					\item Время реакции не менее 1 секунды.
 					\item Время срабатывания механизма оповещения не менее 30 секунд.
 					\item Дальность обнаружения датчиком не менее 15 метров.
@@ -45,6 +48,7 @@
 			\subsubsection{Требования по безотказности}
 				Разрабатываемое устройство должно удовлетворять следующим требованиям:
 				\begin{itemize}
+				\changefontsizes[14pt]{14pt}
 					\item вероятность безотказной работы 0,95, не менее;
 					\item средняя наработка на отказ 50000 часов, не менее;
 					\item среднее время восстановления 1 час, не более.
@@ -56,14 +60,17 @@
 		\subsection{Конструктивные требования}
 			\subsubsection{Конструктивное исполнение входящих в разрабатываемое устройство должно обеспечивать:}
 				\begin{enumerate}
+\changefontsizes[14pt]{14pt}
 					\item Удобство эксплуатации;
 					\item Возможность ремонта.
 				\end{enumerate}
 				\subsubsection{Разрабатываемое изделие должно иметь моноблочную конструкцию.}
 				\subsubsection{Разрабатываемое изделие должно соответствовать следующим требованиям:}
 					\begin{enumerate}
+\changefontsizes[14pt]{14pt}
 						\item Размеры:
 							\begin{enumerate}
+\changefontsizes[14pt]{14pt}
 								\item Габаритные - 450х450х160 мм, не более;
 								\item Установочные - 500х500х210 мм, не более.
 							\end{enumerate}
@@ -73,10 +80,15 @@
 						\item Тип порта - RJ-45.
 						\item Разрабатываемое изделие должно иметь максимальную длину кабеля, подключающего датчик к устройству, 400 метров.
 					\end{enumerate}
-					\subsubsection{Покрытия должны обеспечивать необходимую коррозионную стойкость, надежную работу и декоративный вид разрабатываемого изделия при эксплуатации и при хранении.}
-					\subsubsection{Оборудование не должно требовать доступа сзади при монтаже, подводке кабеля и обслуживании.}
-					\subsubsection{Внешние электрические разъемы должны иметь маркировку, позволяющую определить их назначение.}
-					\subsubsection{Электрическая схема должна быть выполнена на единой печатной плате. Монтаж должен осуществляться с помощью методов групповой пайки.}
+
+					Покрытия должны обеспечивать необходимую коррозионную стойкость, надежную работу и декоративный вид разрабатываемого изделия при эксплуатации и при хранении.
+
+					Оборудование не должно требовать доступа сзади при монтаже, подводке кабеля и обслуживании.
+
+					Внешние электрические разъемы должны иметь маркировку, позволяющую определить их назначение.
+
+					Электрическая схема должна быть выполнена на единой печатной плате. Монтаж должен осуществляться с помощью методов групповой пайки.
+
 		\subsection{Требования по эргономике и технической эстетике}
 			Кодирование и компоновка средств отображения информации, органов управления на пульте управления, цветовое оформление лицевых панелей пульта разрабатываемого изделия должны обеспечивать безошибочность и быстродействие операторов, удобство и безопасность работы в любое время суток.  Необходимо предусмотреть независимое автономное питание, обеспечивающее работу ПКП и извещателей в течении не менее чем 24 часов в дежурном режиме и в течении не менее чем 3 часов в режиме «тревога».
 		\subsection{Требования к эксплуатации, удобству технического обслуживания и ремонта}
@@ -89,6 +101,7 @@
 
 			\subsubsection{Требования к эксплуатационным показателям}
 				\begin{enumerate}
+\changefontsizes[14pt]{14pt}
 					\item Разрабатываемый Комплекс должен обеспечивать циклическую работу со следующими параметрами цикла: время загрузки – 30 мин., время обработки – 10 час., время выгрузки – 30 мин., время подготовки – 10 мин.
 					\item Должен быть обеспечен режим работы от аварийного источника питания.
 					\item Периодическое техническое обслуживание разрабатываемого изделия должно проводиться не реже одного раза в год.
@@ -98,9 +111,11 @@
 				\end{enumerate}
 			\subsubsection{Требования по ремонтопригодности}
 				\begin{enumerate}
+\changefontsizes[14pt]{14pt}
 					\item Обслуживание и ремонт разрабатываемого Изделия должны производиться без применения специальных инструментов."
 					\item Требования к ЗИП
 						\begin{enumerate}
+\changefontsizes[14pt]{14pt}
 							\item Комплект ЗИП должен включать запасные части, необходимые для ремонта и поддержания работоспособного состояния разрабатываемого изделия в течение одного года.
 							\item В комплект ЗИП должны входить дополнительные датчики и вилки RJ-45.
 						\end{enumerate}
@@ -121,6 +136,7 @@
 				Срок хранения разрабатываемого изделия в условиях отапливаемых хранилищ в соответствии с паспортными данными на аппаратуру, но не менее 8 лет.
 			\subsubsection{Условия транспортирования:}
 				\begin{itemize}
+				\changefontsizes[14pt]{14pt}
 					\item Температура окружающей среды: от минус 50 до 50 °С;
 					\item Относительная влажность до 95 \% при температуре 30 °С;
 					\item Атмосферное давление от 84 до 107 кПа (от 630 до 800 мм рт. ст.);
@@ -138,6 +154,7 @@
 				Программное обеспечение должно предоставлять возможность работы с информацией,
 					то есть реализовывать основные функции при работе с информацией, а именно:
 				\begin{itemize}
+				\changefontsizes[14pt]{14pt}
 					\item Сбор;
 					\item Хранение;
 					\item Передачу.
@@ -147,6 +164,7 @@
 				Исполнитель должен руководствоваться требованиями следующих
 				нормативных документов Госстандарта:
 				\begin{itemize}
+				\changefontsizes[14pt]{14pt}
 					\item ГОСТ 34.601.90 – стандарт, устанавливающий стадии и этапы создания АС, а также содержание работ на каждом этапе \cite{gost90};
 					\item ГОСТ 34.603.92 – стандарт, устанавливающий виды испытаний АС и общие требования к их проведению \cite{gost92}.
 				\end{itemize}
@@ -154,24 +172,29 @@
 		\subsection{Основные технико-экономические требования}
 			Разрабатываемый продукт должен обеспечить:
 			\begin{itemize}
+				\changefontsizes[14pt]{14pt}
 				\item стимулирование внедрения и использования эффективных, оптимальных по стоимости, охранных систем;
 				\item создание унифицированного решения для организации информационного взаимодействия между подразделениями.
 			\end{itemize}
 			Внедрение создаваемой в рамках разработки научно-технической продукции должно обеспечивать следующие социально-экономические эффекты:
 			\begin{itemize}
+				\changefontsizes[14pt]{14pt}
 				\item сокращение сроков разработки 3 месяца;
 				\item уменьшение технического риска при реализации передовых технических решений в сфере охраны.
 			\end{itemize}
 			Разрабатываемая продукция должна быть ориентирована на коммерческое применение в следующих областях:
 			\begin{itemize}
+				\changefontsizes[14pt]{14pt}
 				\item системы охраны, мониторинга и управления;
 				\item системы автоматизации организаций, связанных с охраной.
 			\end{itemize}
 
 	\section{Наименование этапов и выполняемых работ}
 		\begin{enumerate}
+\changefontsizes[14pt]{14pt}
 			\item Техническое предложение:
 				\begin{enumerate}
+\changefontsizes[14pt]{14pt}
 					\item Выбор датчиков;
 					\item Выбор структурной схемы;
 					\item Выбор оптимального варианта реализации;
@@ -180,10 +203,13 @@
 				\end{enumerate}
 			\item Технический проект:
 				\begin{enumerate}
+\changefontsizes[14pt]{14pt}
 					\item Разработка технического проекта, в том числе:
 						\begin{itemize}
+				\changefontsizes[14pt]{14pt}
 							\item Разработка конструктивных решений Комплекса и его составных частей:
 								\begin{itemize}
+				\changefontsizes[14pt]{14pt}
 									\item Разработка чертежей;
 									\item Разработка функциональной и принципиальной схемы.
 									\item Создание рисунка печатной платы.
